// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate pipeline snapshot > api-only: worker without frontend 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema }));

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = string;

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;

exports[`generate pipeline snapshot > auth with localhost in app.origins: sameSite=none end-to-end 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com", "http://localhost:5173"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "http://localhost:5173"], sameSite: "none" })).use(dbRuntime({ binding: "DB_MAIN", schema: schema }));

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = "account" | "session" | "user" | "verification";

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import authCallbacks from "../src/worker/plugins/auth";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "http://localhost:5173"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "http://localhost:5173"], sameSite: "none", callbacks: authCallbacks })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"
compatibility_flags = [ "nodejs_compat" ]

[vars]
AUTH_SECRET = ""
APP_URL = ""

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_EMAIL"
type = "ratelimit"
limit = 3
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_IP"
type = "ratelimit"
limit = 100
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;

exports[`generate pipeline snapshot > db + api (no auth, no frontend): schema tooling + minimal worker 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema }));

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = string;

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com"] }).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;

exports[`generate pipeline snapshot > frontend-only: vite + solid + solid-ui without worker 1`] = `
{
  "appCss": "@import "tailwindcss";
@import "@fcalell/plugin-solid-ui/globals.css";
@source "../src";

@layer base {
:root {
	--ui-font-mono: "JetBrains Mono Variable", "JetBrains Mono Variable Fallback", ui-monospace, "Cascadia Code", "Source Code Pro", monospace;
}
}
",
  "entry": "import "./app.css";
import { Router } from "@solidjs/router";
import { render } from "solid-js/web";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": "import type { JSX } from "solid-js";
import { MetaProvider } from "@fcalell/plugin-solid-ui/meta";
import { Toaster } from "@fcalell/plugin-solid-ui/components/toast";
export default (props: { children: JSX.Element }) => <MetaProvider>{props.children}<Toaster /></MetaProvider>;
",
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig, searchForWorkspaceRoot } from "vite";
import { themeFontsPlugin } from "@fcalell/plugin-solid-ui/node/fonts";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import tailwindcss from "@tailwindcss/vite";
import solidPlugin from "vite-plugin-solid";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin(), tailwindcss(), themeFontsPlugin([{ family: "JetBrains Mono Variable", specifier: "@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2", weight: "100 800", style: "normal", role: "mono", fallback: { family: "monospace", ascentOverride: "90%", descentOverride: "22%", lineGapOverride: "0%", sizeAdjust: "100%" } }])], server: { port: 3000, fs: { allow: [searchForWorkspaceRoot(process.cwd()), searchForWorkspaceRoot(fileURLToPath(import.meta.resolve("@fcalell/plugin-solid-ui")))] } } });
",
  "worker": null,
  "wrangler": null,
}
`;

exports[`generate pipeline snapshot > frontend-only: vite + solid without worker 1`] = `
{
  "appCss": null,
  "entry": "import { Router } from "@solidjs/router";
import { render } from "solid-js/web";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": null,
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig } from "vite";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import solidPlugin from "vite-plugin-solid";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin()], server: { port: 3000 } });
",
  "worker": null,
  "wrangler": null,
}
`;

exports[`generate pipeline snapshot > full-stack with explicit app.origins drives auth sameSite=none end-to-end 1`] = `
{
  "appCss": "@import "tailwindcss";
@import "@fcalell/plugin-solid-ui/globals.css";
@source "../src";

@layer base {
:root {
	--ui-font-mono: "JetBrains Mono Variable", "JetBrains Mono Variable Fallback", ui-monospace, "Cascadia Code", "Source Code Pro", monospace;
}
}
",
  "entry": "import "./app.css";
import { Router } from "@solidjs/router";
import { render } from "solid-js/web";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import middleware from "../src/worker/middleware";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com", "http://localhost:3000"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "http://localhost:3000"], sameSite: "none" })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).use(middleware);

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = "account" | "session" | "user" | "verification";

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": "import type { JSX } from "solid-js";
import { MetaProvider } from "@fcalell/plugin-solid-ui/meta";
import { Toaster } from "@fcalell/plugin-solid-ui/components/toast";
export default (props: { children: JSX.Element }) => <MetaProvider>{props.children}<Toaster /></MetaProvider>;
",
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig, searchForWorkspaceRoot } from "vite";
import { themeFontsPlugin } from "@fcalell/plugin-solid-ui/node/fonts";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import tailwindcss from "@tailwindcss/vite";
import solidPlugin from "vite-plugin-solid";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin(), tailwindcss(), themeFontsPlugin([{ family: "JetBrains Mono Variable", specifier: "@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2", weight: "100 800", style: "normal", role: "mono", fallback: { family: "monospace", ascentOverride: "90%", descentOverride: "22%", lineGapOverride: "0%", sizeAdjust: "100%" } }])], server: { port: 3000, fs: { allow: [searchForWorkspaceRoot(process.cwd()), searchForWorkspaceRoot(fileURLToPath(import.meta.resolve("@fcalell/plugin-solid-ui")))] } } });
",
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import middleware from "../src/worker/middleware";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import authCallbacks from "../src/worker/plugins/auth";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "http://localhost:3000"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "http://localhost:3000"], sameSite: "none", callbacks: authCallbacks })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).use(middleware).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"
compatibility_flags = [ "nodejs_compat" ]

[vars]
AUTH_SECRET = ""
APP_URL = ""

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_EMAIL"
type = "ratelimit"
limit = 3
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_IP"
type = "ratelimit"
limit = 100
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;

exports[`generate pipeline snapshot > full-stack: db + auth + api + vite + solid + solid-ui 1`] = `
{
  "appCss": "@import "tailwindcss";
@import "@fcalell/plugin-solid-ui/globals.css";
@source "../src";

@layer base {
:root {
	--ui-font-mono: "JetBrains Mono Variable", "JetBrains Mono Variable Fallback", ui-monospace, "Cascadia Code", "Source Code Pro", monospace;
}
}
",
  "entry": "import "./app.css";
import { Router } from "@solidjs/router";
import { render } from "solid-js/web";
import { routes } from "virtual:fcalell-routes";
import Providers from "virtual:stack-providers";
render(() => <Providers><Router>{routes}</Router></Providers>, document.getElementById("app") as HTMLElement);
",
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import middleware from "../src/worker/middleware";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com", "http://localhost:3000"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "https://app.example.com", "http://localhost:3000"], sameSite: "none" })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).use(middleware);

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = "account" | "session" | "user" | "verification";

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
	<head>
		<meta charset="UTF-8" >
		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
	<title>test-app</title></head>
	<body>
		<div id="app"></div>
	<script src="/entry.tsx" type="module"></script></body>
</html>
",
  "providers": "import type { JSX } from "solid-js";
import { MetaProvider } from "@fcalell/plugin-solid-ui/meta";
import { Toaster } from "@fcalell/plugin-solid-ui/components/toast";
export default (props: { children: JSX.Element }) => <MetaProvider>{props.children}<Toaster /></MetaProvider>;
",
  "viteConfig": "import { fileURLToPath } from "node:url";
import { defineConfig, searchForWorkspaceRoot } from "vite";
import { themeFontsPlugin } from "@fcalell/plugin-solid-ui/node/fonts";
import { providersPlugin } from "@fcalell/plugin-vite/preset";
import tailwindcss from "@tailwindcss/vite";
import solidPlugin from "vite-plugin-solid";
export default defineConfig({ root: fileURLToPath(new URL(".", import.meta.url)), publicDir: "../public", build: { outDir: "../dist/client", emptyOutDir: true }, plugins: [providersPlugin(), solidPlugin(), tailwindcss(), themeFontsPlugin([{ family: "JetBrains Mono Variable", specifier: "@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2", weight: "100 800", style: "normal", role: "mono", fallback: { family: "monospace", ascentOverride: "90%", descentOverride: "22%", lineGapOverride: "0%", sizeAdjust: "100%" } }])], server: { port: 3000, fs: { allow: [searchForWorkspaceRoot(process.cwd()), searchForWorkspaceRoot(fileURLToPath(import.meta.resolve("@fcalell/plugin-solid-ui")))] } } });
",
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import middleware from "../src/worker/middleware";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import authCallbacks from "../src/worker/plugins/auth";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com", "http://localhost:3000"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "https://app.example.com", "http://localhost:3000"], sameSite: "none", callbacks: authCallbacks })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).use(middleware).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"
compatibility_flags = [ "nodejs_compat" ]

[vars]
AUTH_SECRET = ""
APP_URL = ""

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_EMAIL"
type = "ratelimit"
limit = 3
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_IP"
type = "ratelimit"
limit = 100
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;

exports[`generate pipeline snapshot > worker-only with auth: no frontend, APP_URL fallback, derived CORS 1`] = `
{
  "appCss": null,
  "entry": null,
  "files": [
    {
      "content": "import * as schema from "../src/schema";
import createWorker from "@fcalell/plugin-api/runtime";
import type { AppBuilder } from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import { createProcedure } from "@fcalell/plugin-api/procedure";
const __chain = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "https://app.example.com"] })).use(dbRuntime({ binding: "DB_MAIN", schema: schema }));

// Type-only: \`__chain\` mirrors the runtime plugin composition in
// .stack/worker.ts so \`WorkerContext\` matches the real request context
// without re-deriving each runtime factory's generics by hand. Never
// exported or called further — only its type is used below.
type ContextOf<B> = B extends AppBuilder<infer C> ? C : never;
type WorkerContext = ContextOf<typeof __chain>;
type RbacStatements = Record<never, never>;
type Entity = "account" | "session" | "user" | "verification";

export const procedure = createProcedure<WorkerContext, RbacStatements, Entity>();
",
      "path": ".stack/procedure.ts",
    },
    {
      "content": "// Generated by @fcalell/plugin-api — do not edit.
export * from "./users.ts";
",
      "path": "src/worker/routes/index.ts",
    },
  ],
  "html": null,
  "providers": null,
  "viteConfig": null,
  "worker": "import * as schema from "../src/schema";
import * as routes from "../src/worker/routes/index.ts";
import createWorker from "@fcalell/plugin-api/runtime";
import authRuntime from "@fcalell/plugin-auth/runtime";
import dbRuntime from "@fcalell/plugin-db/runtime";
import authCallbacks from "../src/worker/plugins/auth";
const worker = createWorker({ prefix: "/rpc", cors: ["https://example.com", "https://app.example.com"] }).use(authRuntime({ emailOtp: true, secretVar: "AUTH_SECRET", appUrlVar: "APP_URL", rateLimiter: { ip: { binding: "RATE_LIMITER_IP" }, email: { binding: "RATE_LIMITER_EMAIL" } }, trustedOrigins: ["https://example.com", "https://app.example.com"], callbacks: authCallbacks })).use(dbRuntime({ binding: "DB_MAIN", schema: schema })).handler(routes);
export type AppRouter = typeof worker._router;
export default worker;
",
  "wrangler": "name = "test-app"
compatibility_date = "2025-01-01"
main = "worker.ts"
compatibility_flags = [ "nodejs_compat" ]

[vars]
AUTH_SECRET = ""
APP_URL = ""

[[d1_databases]]
binding = "DB_MAIN"
database_id = "abc-123"
database_name = "abc-123"
migrations_dir = "./src/migrations"

[[unsafe.bindings]]
name = "RATE_LIMITER_EMAIL"
type = "ratelimit"
limit = 3
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_IP"
type = "ratelimit"
limit = 100
period = 60

[[unsafe.bindings]]
name = "RATE_LIMITER_RPC"
type = "ratelimit"
limit = 1000
period = 60
",
}
`;
